--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Test Extension Options</title>
+  <meta charset="UTF-8">
+  <title>Haru Dashboard</title>
   <script src="js/vendor.js"></script>
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="js/options.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
