--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Haru Dashboard</title>
   <script src="js/vendor.js"></script>
+  <!-- <link href="output.css" rel="stylesheet">  -->
 </head>
 
 <body>
